Only push as gha trigger (#8)
* Testing pipeline

* Testing pipeline

* Only push as gha trigger

--- a/.github/build.yml
+++ b/.github/build.yml
@@ -1,10 +1,11 @@
 name: Build
 
 on:
-  pull_request:
+#  pull_request:
   push:
     branches:
       - gha_testing
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
