--- a/plonk/Cargo.toml
+++ b/plonk/Cargo.toml
@@ -14,10 +14,10 @@ ark-ff="0.4.2"
 ark-std="0.4.0"
 
 # Jellyfish Deps
-jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
-jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+jf-plonk = {git = "ssh://git@jellyfish.github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
+jf-relation = {git = "ssh://git@jellyfish.github.com/Torus-ZK/jellyfish.git", branch = "master"}
+jf-utils = {git = "ssh://git@jellyfish.github.com/Torus-ZK/jellyfish.git", branch = "master"}
+jf-primitives = {git = "ssh://git@jellyfish.github.com/Torus-ZK/jellyfish.git", branch = "master"}
 
 poseidon-ark = {git = "https://github.com/arnaucube/poseidon-ark.git", branch = "main"}
 
