--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,3 +13,15 @@ ark-ec="0.4.2"
 ark-ff="0.4.2"
 ark-std="0.4.0"
 
+# JF Deps
+ jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
+ jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+
+
+plonk-prover = { path="../plonk"}
+
+poseidon-ark = {git = "https://github.com/arnaucube/poseidon-ark.git", branch = "main"}
+num-bigint = "0.4.4"
+
