chore: clean up code

--- a/plonk/Cargo.toml
+++ b/plonk/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 ark-bn254="0.4.0"
 ark-ed-on-bn254="0.4.0"
 ark-ec="0.4.2"
-ark-ff="0.4.2"
+ark-ff={ version =  "0.4.2", features = ["asm"]}
 ark-std="0.4.0"
 ark-poly="0.4.2"
 ark-serialize= "0.4.2"
@@ -31,7 +31,7 @@ serde = "1.0.192"
 serde_json = "1.0.108"
 num-bigint = {version = "0.4.4", features = ["serde"]}
 num-traits = "0.2.17"
-
+itertools = "0.12.0"
 
 
 [dev-dependencies]
@@ -40,8 +40,28 @@ criterion = "0.5.1"
 
 [features]
 default = ["parallel"]
-std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "jf-primitives/std", "jf-relation/std", "jf-utils/std"]
-parallel = ["ark-ff/parallel", "ark-ec/parallel", "jf-primitives/parallel", "jf-utils/parallel", "jf-relation/parallel"]
+std = [
+    "ark-std/std",
+    "ark-serialize/std",
+    "ark-ff/std",
+    "ark-ec/std",
+    "ark-poly/std",
+    "itertools/use_std",
+    "jf-primitives/std",
+    "jf-relation/std",
+    "jf-utils/std",
+    "num-bigint/std",
+]
+test_apis = [] # exposing apis for testing purpose
+parallel = [
+    "ark-ff/parallel",
+    "ark-ec/parallel",
+    "ark-poly/parallel",
+    "jf-utils/parallel",
+    "jf-relation/parallel",
+    "jf-primitives/parallel",
+]
+
 
 [profile.test]
 opt-level = 3
