--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -39,7 +39,7 @@ tracing-subscriber = "0.3.18"
 serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
 serde_with = "3.4.0"
-hex="0.4.3"
+hex= {version= "0.4.3", features = ["serde"]}
 serde-hex = "0.1.0"
 dotenvy = "0.15.7"
 derivative = "2.2.0"
