--- a/plonk/Cargo.toml
+++ b/plonk/Cargo.toml
@@ -32,6 +32,8 @@ serde_json = "1.0.108"
 num-bigint = {version = "0.4.4", features = ["serde"]}
 num-traits = "0.2.17"
 itertools = "0.12.0"
+rand_chacha = "0.3.1"
+rand = "0.8.5"
 
 
 [dev-dependencies]
