--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,5 +49,10 @@ jobs:
       - name: Cargo Test
         uses: actions-rs/cargo@v1
         with:
-          command: test
+          command: test -- --skip rollup
+
+      - name: Cargo Test Rollup 
+        uses: actions-rs/cargo@v1
+        with:
+        command: test --release  --package plonk-prover --lib -- rollup::circuits::bounce_merge::bounce_merge_test::bounce_merge_test --exact --nocapture
 
