--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,5 @@ jobs:
         with:
           token: ${{ github.token }}
 
-
       - name: Cargo Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+        run: cargo test --release -- --nocapture
