--- a/plonk/Cargo.toml
+++ b/plonk/Cargo.toml
@@ -16,11 +16,16 @@ ark-poly="0.4.2"
 ark-serialize= "0.4.2"
 
 # Jellyfish Deps
-jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
-jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-curves = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+# jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
+# jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+# jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+# jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+
+jf-plonk = {path = "/Users/ilyasridhuan/Code/jellyfish/plonk", features = ["test-srs"]}
+jf-relation = {path = "/Users/ilyasridhuan/Code/jellyfish/relation"}
+jf-utils = {path = "/Users/ilyasridhuan/Code/jellyfish/utilities"}
+jf-primitives = {path = "/Users/ilyasridhuan/Code/jellyfish/primitives"}
+curves = {path = "/Users/ilyasridhuan/Code/jellyfish/curves"}
 
 # poseidon-ark = {git = "https://github.com/arnaucube/poseidon-ark.git", branch = "main"}
 common = {path = "../common"}
@@ -34,7 +39,6 @@ num-traits = "0.2.17"
 itertools = "0.12.0"
 rand_chacha = "0.3.1"
 rand = "0.8.5"
-
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -67,6 +71,8 @@ parallel = [
 
 [profile.test]
 opt-level = 3
+codegen-units = 1
+lto = "fat"
 
 [profile.bench]
 opt-level = 3
