fix: remove infs as part of rollup circuits

--- a/plonk/Cargo.toml
+++ b/plonk/Cargo.toml
@@ -16,16 +16,11 @@ ark-poly="0.4.2"
 ark-serialize= "0.4.2"
 
 # Jellyfish Deps
-# jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
-# jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-# jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-# jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-
-jf-plonk = {path = "/Users/ilyasridhuan/Code/jellyfish/plonk", features = ["test-srs"]}
-jf-relation = {path = "/Users/ilyasridhuan/Code/jellyfish/relation"}
-jf-utils = {path = "/Users/ilyasridhuan/Code/jellyfish/utilities"}
-jf-primitives = {path = "/Users/ilyasridhuan/Code/jellyfish/primitives"}
-curves = {path = "/Users/ilyasridhuan/Code/jellyfish/curves"}
+jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
+jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+curves = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
 
 # poseidon-ark = {git = "https://github.com/arnaucube/poseidon-ark.git", branch = "main"}
 common = {path = "../common"}
