--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -26,11 +26,16 @@ num-bigint = {version = "0.4.4", features = ["serde"]}
 num-traits = "0.2.17"
 
 
-jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
-jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
-curves = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
+jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test", features = ["test-srs"]}
+jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
+jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
+jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
+curves = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
+#jf-plonk = {path = "../../jellyfish/plonk", features = ["test-srs"]}
+#jf-relation = {path = "../../jellyfish/relation"}
+#jf-utils = {path = "../../jellyfish/utilities"}
+#jf-primitives = {path = "../../jellyfish/primitives"}
+#curves = {path = "../../jellyfish/curves"}
 
 
 
