--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -31,6 +31,7 @@ ark-serialize="0.4.2"
 common = {path = "../common"}
 trees = {path = "../trees"}
 plonk-prover = { path="../plonk"}
+zk-macros = { path="../macros"}
 num-bigint = {version = "0.4.4", features = ["serde"]}
 num-traits = "0.2.17"
 bip32 = "0.5.1"
