--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,6 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "client"
+
 [dependencies]
 # Arkworks Deps
 ark-bn254="0.4.0"
@@ -32,6 +39,7 @@ common = {path = "../common"}
 trees = {path = "../trees"}
 plonk-prover = { path="../plonk"}
 zk-macros = { path="../macros"}
+
 num-bigint = {version = "0.4.4", features = ["serde"]}
 num-traits = "0.2.17"
 bip32 = "0.5.1"
@@ -40,16 +48,24 @@ rand_chacha = "0.3.1"
 
 # axum
 tokio = {version = "1.29.1", features = ["full"]}
-axum = { version = "0.6.20", features = ["json"]}
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+axum = { version = "0.7.7", features = ["json"]}
+tracing = { version = "0.1.40", features = ["log"]}
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
 serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
 serde_with = "3.4.0"
+serde-aux = "3"
 hex= {version= "0.4.3", features = ["serde"]}
 serde-hex = "0.1.0"
 dotenvy = "0.15.7"
 derivative = "2.2.0"
 reqwest = {version = "0.11.22", features = ["json"]}
+config = "0.14"
 
 rayon = "1.8.0"
+anyhow = "1"
+
+[dev-dependencies]
+once_cell = "1"
