--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -69,3 +69,6 @@ anyhow = "1"
 
 [dev-dependencies]
 once_cell = "1"
+bip39 = {version = "2.1", features = ["rand", "french"]}
+itertools = "0.13.0"
+random_word = { version = "0.4.2", features = ["en"] }
