unifies integration testing in one crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["client", "plonk", "trees", "common","sequencer", "macros"]
+members = ["client", "plonk", "trees", "common","sequencer", "macros", "integration_tests"]
 resolver = "2"
 
 
