--- a/client/configuration/local.yaml
+++ b/client/configuration/local.yaml
@@ -1,5 +1,6 @@
-application:
+client:
   host: 127.0.0.1
   base_url: "http://127.0.0.1"
 sequencer:
-  base_url: "localhost"
+  host: 127.0.0.1
+  base_url: "http://127.0.0.1"
