--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -23,6 +23,7 @@ thiserror="1.0.50"
 poseidon-paramgen="0.4.0"
 serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
+serde_cbor ="0.11.2"
 derivative = "2.2.0"
 num-bigint = {version = "0.4.4", features = ["serde"]}
 num-traits = "0.2.17"
