--- a/integration_tests/Cargo.toml
+++ b/integration_tests/Cargo.toml
@@ -26,23 +26,21 @@ client = {path="../client"}
 sequencer = {path="../sequencer"}
 
 num-bigint = {version = "0.4.4", features = ["serde"]}
-bip32 = "0.5.1"
 rand = { version = "0.8.5", features = ["std"]}
 rand_chacha = "0.3.1"
 tokio = {version = "1.29.1", features = ["full"]}
-axum = { version = "0.7.7", features = ["json"]}
-tracing = { version = "0.1.40", features = ["log"]}
-tracing-log = "0.1"
 serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
-dotenvy = "0.15.7"
-derivative = "2.2.0"
 reqwest = {version = "0.11.22", features = ["json"]}
 anyhow = "1"
-async-trait = "0.1.83"
 once_cell = "1"
 bip39 = {version = "2.1", features = ["rand", "french"]}
 itertools = "0.13.0"
 random_word = { version = "0.4.2", features = ["en"] }
 wiremock = "0.5"
+serde_cbor ="0.11.2"
+clap = { version = "4.3", features = ["derive"] }
+
+[dev-dependencies]
+
 
